--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "calendar",
   "version": "0.1.0",
+  "homepage": "https://Cymek12.github.io/Calendar/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,6 +11,7 @@
     "devextreme-react": "^24.1.5",
     "devextreme-themebuilder": "^24.1.5",
     "firebase": "^10.13.1",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -19,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
